[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iotfuzz"
version = "0.1.0"
description = "Black-box HTTP fuzzing toolkit for real IoT/router devices."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
iotfuzz = "iotfuzz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iotfuzz*"]
